package src.ui.utils;

import java.awt.*;

public class UIStyles {
    public static final Color BG_DARK = new Color(30, 30, 30);
    public static final Color BG_DARKER = new Color(20, 20, 20);
    public static final Color BG_LIGHTER = new Color(45, 45, 45);
    public static final Color ACCENT_GREEN = new Color(46, 204, 113);
    public static final Color TEXT_COLOR = new Color(220, 220, 220);
    public static final Color BORDER_COLOR = new Color(60, 60, 60);
}
