@startuml

' Title
title Image Classifier System - UML Class Diagram
note "Group Members: [Łukasz Kowalski, Hubert Plewa, Wiktor Smura]" as GroupNote
' ========== C++ CLASSES ==========

' 1. NeuralNetwork
class NeuralNetwork {
  - layers : vector<int>
  - weights : vector<vector<vector<double>>>
  - biases : vector<vector<double>>
  - learning_rate : double
  - activation : unique_ptr<ActivationFunction>
  - training_mutex : mutex
  - sigmoid(x: double) : double
  - sigmoid_derivative(x: double) : double
  - softmax(x: vector<double>) : vector<double>
  + NeuralNetwork(layer_sizes: vector<int>, lr: double, act_type: ActivationType)
  + ~NeuralNetwork()
  + forward(input: vector<double>) : vector<double>
  + train(input: vector<double>, target: vector<double>) : void
  + train_batch(inputs: vector<vector<double>>, targets: vector<vector<double>>, epochs: int) : void
  + train_batch_parallel(inputs: vector<vector<double>>, targets: vector<vector<double>>, epochs: int, num_threads: int) : void
  + save(filename: string) : void
  + load(filename: string) : void
  + predict_class(input: vector<double>) : int
  + getActivationType() : ActivationType
}

' 2. ActivationFunction
abstract class ActivationFunction {
  + {abstract} activate(x: double) : double
  + {abstract} derivative(x: double) : double
  + {abstract} getType() : ActivationType
}

' 3. SigmoidActivation
class SigmoidActivation {
  + activate(x: double) : double
  + derivative(x: double) : double
  + getType() : ActivationType
}

' 4. ReLUActivation
class ReLUActivation {
  + activate(x: double) : double
  + derivative(x: double) : double
  + getType() : ActivationType
}

' 5. TanhActivation
class TanhActivation {
  + activate(x: double) : double
  + derivative(x: double) : double
  + getType() : ActivationType
}

' 6. ActivationFactory
class ActivationFactory {
  {static} + create(type: ActivationType) : unique_ptr<ActivationFunction>
}

' 7. DataBuffer
class "DataBuffer<T>" as DataBuffer {
  - data : vector<T>
  - max_size : size_t
  + DataBuffer(max: size_t)
  + add(item: T) : void
  + get(idx: size_t) : T
  + size() : size_t
  + clear() : void
  + empty() : bool
  + getData() : vector<T>
  + findMin() : T
  + findMax() : T
  + countIf(pred: Predicate) : size_t
}

' 8. Matrix
class "Matrix<T>" as Matrix {
  - data : vector<vector<T>>
  - rows : size_t
  - cols : size_t
  + Matrix(r: size_t, c: size_t, init_val: T)
  + getRows() : size_t
  + getCols() : size_t
  + operator[](row: size_t) : vector<T>
  + operator+(other: Matrix<T>) : Matrix<T>
  + operator-(other: Matrix<T>) : Matrix<T>
  + operator*(scalar: T) : Matrix<T>
  + transpose() : Matrix<T>
}

' Enum
enum ActivationType {
  SIGMOID
  RELU
  TANH
  SOFTMAX
  LINEAR
}

' ========== JAVA CLASSES ==========

' 9. MLAppUI - Main Frame
class MLAppUI {
  - drawingCanvas : DrawingPanel
  - statusPanel : StatusPanel
  - canvasTitle : JLabel
  + MLAppUI()
  - initComponents() : void
  - clearCanvas() : void
  - selectFile() : void
  - loadImage(file: File) : void
  - processImage() : void
  - callHealthEndpoint() : String
  {static} + main(args: String[]) : void
}

' 10. DrawingPanel
class DrawingPanel {
  - canvasImage : BufferedImage
  + DrawingPanel()
  # paintComponent(g: Graphics) : void
  + loadImage(img: BufferedImage) : void
  + getImage() : BufferedImage
  + clearCanvas() : void
  + hasImage() : boolean
}

' 11. ControlPanel
class ControlPanel {
  + ControlPanel(clearAction: Runnable, selectFileAction: Runnable, processAction: Runnable)
  - createButton(text: String, color: Color, action: Runnable) : JButton
}

' 12. StatusPanel
class StatusPanel {
  - statusLabel : JLabel
  + StatusPanel(initialText: String)
  + setStatus(text: String) : void
}

' 13. HeaderPanel
class HeaderPanel {
  + HeaderPanel()
}

' 14. UIStyles
class UIStyles {
  {static} + BG_DARK : Color
  {static} + BG_DARKER : Color
  {static} + BG_LIGHTER : Color
  {static} + ACCENT_GREEN : Color
  {static} + TEXT_COLOR : Color
  {static} + BORDER_COLOR : Color
}

' ========== RELATIONSHIPS ==========

' C++ Relationships
ActivationFunction <|-- SigmoidActivation
ActivationFunction <|-- ReLUActivation
ActivationFunction <|-- TanhActivation
NeuralNetwork *-- ActivationFunction : owns
ActivationFactory ..> ActivationFunction : creates
ActivationFactory ..> ActivationType : uses
NeuralNetwork ..> ActivationType : uses

' Java Relationships
MLAppUI *-- DrawingPanel : contains
MLAppUI *-- StatusPanel : contains
MLAppUI --> ControlPanel : creates
MLAppUI --> HeaderPanel : creates
MLAppUI ..> UIStyles : uses
DrawingPanel ..> UIStyles : uses
ControlPanel ..> UIStyles : uses
StatusPanel ..> UIStyles : uses
HeaderPanel ..> UIStyles : uses

@enduml